// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support CTA Component should render 1`] = `
<React.Fragment>
  <span>
    Do you need more assistance?
  </span>
  <Button
    className="ToggleButton"
    onClick={[MockFunction]}
    primary={true}
    size="default"
  >
    Submit a Ticket
  </Button>
</React.Fragment>
`;

exports[`Support CTA Component should render with phone support 1`] = `
<React.Fragment>
  <div
    className="Phone"
  >
    <p>
      Do you need more assistance?
    </p>
    <p>
      <strong>
        <UnstyledLink
          className="PhoneLink"
          title="Call Support"
          to="tel:1-415-751-0928"
        >
          +1 (415) 751-0928
        </UnstyledLink>
      </strong>
       
      <span
        className="Spacer"
      >
        —
      </span>
       
      <strong>
        9am – 8pm ET, Mon – Fri
      </strong>
    </p>
  </div>
  <Button
    className="ToggleButton"
    onClick={[MockFunction]}
    primary={true}
    size="default"
  >
    Submit a Ticket
  </Button>
</React.Fragment>
`;
